# keisanki-group-2

./: README.md  pyproject.toml  requirements.txt
data/: best_model_info.txt  data.txt  direct_model.pkl  result.txt  test_data.pkl
models/: direct_model.pkl  emo_neuralnet.pkl  emo_ridge_best.pkl  emo_xgboost_best.pkl  emtopn.pkl
src/: data_preprocess.py  predict_polarity.py  preprocess.py  run_model.py  validation.py
src/direct/: train.py
src/indirect/: emotion.py  emtopn_eval.py  emtopn_trainer.py
